Change Log

2009-07-01
	Added the ACOS, ASIN, ATAN procedures.
	Fix: real number normalization *first* removed trailing
	zeros and *then* truncated the mantissa. Oops.
2009-06-29
	Added '#' syntax for unspecific digits in inexact numbers.
2009-06-26
	Fix: STRING->NUMBER always returned an inexact result for
	real number representations.
2009-06-25
	Fix: Stack was not cleaned up properly in some error conditions.
	Fix: (*) and (+) could crash the interpreter.
	Internal: Added 64-bit emulation for 32-bit systems.
2009-06-15
	Minor cleanup, added comments where necessary.
	* Do not expect any updates in the near future.
	* I need a break from programming.
	* Bug reports are still welcome, but will get low
	* priority for now.
2009-06-09
	Fixed a variable collision in the hash table implementation.
	(lib/hash-table.scm)
2009-06-08
	Made PRINT-CODE recognize new numeric functions as primitives.
	Fixed INVERSEO procedure in AMK.
2009-06-07
	Made STRING->NUMBER recognize real numbers.
	Fix: missing initialization of got_d in string_numeric().
	Fix: FLOOR and EXACT->INEXACT did not normalize their results.
	Simplified counter_to_string(), based on code by Masaru KIMURA.
	Added loads of tests for STRING->NUMBER.
2009-06-06
	Extended domain of NUMBER->STRING to REAL.
	Added support for the "precision markers" D,F,L,S, although
	only one floating point precision exists.
	Fix: MANTISSA did not return negative signs.
	Fix: INEXACT->EXACT lost the sign of its operand.
	Fix: #I created a double sign in negative integers.
	Added/updated help pages for various procedures.
	Added more tests.
2009-06-05
	Fix: SIN, COS, TAN expected degrees, should be radians. Oops.
	Ran further 64-bit tests on the Alpha, all passed.
2009-06-04
	Implemented LOG and EXP procedures. Added tests.
	Fixed size of Called_procedures[]. Good catch, Masaru KIMURA.
2009-06-03
	Implemented CEILING, FLOOR, ROUND, TRUNCATE procedures.
	Implemented SIN, COS, and TAN procedures.
	Added tests for all of the above.