@@ -1606,6 +1606,36 @@
 (test (abs 0.0) 0.0)
 (test (abs -0.0) 0.0)
 
+(test (< 1.570796320 (acos 0.00) 1.570796329) #t)
+(test (< 1.318116070 (acos 0.25) 1.318116079) #t)
+(test (< 1.047197550 (acos 0.50) 1.047197559) #t)
+(test (< 0.722734240 (acos 0.75) 0.722734249) #t)
+(test (< 3.141592650 (acos -1.00) 3.141592659) #t)
+(test (< 2.418858400 (acos -0.75) 2.418858409) #t)
+(test (< 2.094395100 (acos -0.50) 2.094395109) #t)
+(test (< 1.823476580 (acos -0.25) 1.823476589) #t)
+(test (acos 1) 0)
+
+(test (asin 0) 0)
+(test (< 0.252680250 (asin 0.25) 0.252680259) #t)
+(test (< 0.523598770 (asin 0.50) 0.523598779) #t)
+(test (< 0.848062070 (asin 0.75) 0.848062079) #t)
+(test (< 1.570796320 (asin 1.00) 1.570796329) #t)
+(test (< -1.570796329 (asin -1.00) -1.570796320) #t)
+(test (< -0.848062079 (asin -0.75) -0.848062070) #t)
+(test (< -0.523598779 (asin -0.50) -0.523598770) #t)
+(test (< -0.252680259 (asin -0.25) -0.252680250) #t)
+
+(test (atan 0) 0)
+(test (< 0.244978660 (atan 0.25) 0.244978669) #t)
+(test (< 0.463647600 (atan 0.50) 0.463647610) #t)
+(test (< 0.643501100 (atan 0.75) 0.643501109) #t)
+(test (< 0.785398160 (atan 1.00) 0.785398169) #t)
+(test (< -0.244978669 (atan -0.25) -0.244978660) #t)
+(test (< -0.463647610 (atan -0.50) -0.463647600) #t)
+(test (< -0.643501109 (atan -0.75) -0.643501100) #t)
+(test (< -0.785398169 (atan -1.00) -0.785398160) #t)
+
 (test (ceiling  0.0) 0.0)
 (test (ceiling  1.0) 1.0)
 (test (ceiling -1.0) -1.0)
@@ -2490,6 +2520,17 @@
 (test (string->number "#e100") 100.0)
 (test (string->number "#i100") 100.0)
 (test (inexact? (string->number "#i100")) #t)
+(test (string->number "+###") 555.0)
+(test (string->number "-###") -555.0)
+(test (string->number "-#.#") -5.5)
+(test (string->number "+#.#") 5.5)
+(test (string->number ".###") 0.555)
+(test (string->number "1#.#4") 15.54)
+(test (string->number "#") #f)
+(test (string->number "###") #f)
+(test (string->number "#.#") #f)
+(test (string->number "#23") #f)
+(test (inexact? (string->number "+###")) #t)
 
 (test (string-append "" "") "")
 (test (string-append "abc" "") "abc")
